src/test/deca/context/invalid/created/return_but_noValue/return_FLOAT_empty.deca
// Description:
// 		Methode qui contient une valeur de renvoi mais pas de return
// Resultat:
// 		Erreur contexte, Ligne 8 : Return value is expected is this method

class A {
	float getV() {
		float x = 5.8;
	}
}
